--- a/Pandas102.ipynb
+++ b/Pandas102.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas102.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3EPHFLaciJwb6PDUIJg8h",
+      "authorship_tag": "ABX9TyNmVE4iflZSjDq0Xh5wwIZD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Ra-YvYU2eAJ8"
       },
@@ -53,7 +53,7 @@
         "id": "ZUbpLDrbe30T",
         "outputId": "4f33f5ff-3c34-42f4-c735-cfa909219c4d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "CY10BFfDfIJ5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "id": "7x_AmkCLfw9E",
         "outputId": "8ac05353-4512-4423-834f-349bc9a5d28e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "BypBt3h8hu0K"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "id": "10K4wzLfhkAl",
         "outputId": "8cfbbc92-ee45-4705-92a7-b39832b2a659"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
         "id": "Oj3-ZIF4idev",
         "outputId": "bc6d69da-6d02-4a06-b3e6-ff521b2d5e28"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
         "id": "MaqG_c4df0U3",
         "outputId": "61834c34-60c6-4601-c3ee-74c06e6b0b28"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +689,7 @@
         "id": "JB4S5upZj8Fs",
         "outputId": "323513d0-8d6c-499e-ba76-8380b8ec3861"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
         "id": "kOA0RbRckUEw",
         "outputId": "306a9843-83d4-4d2a-e84a-a7a817e49ddf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1207,7 +1207,7 @@
       "metadata": {
         "id": "RSAmDGOWlM_Y"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1233,7 +1233,7 @@
         "id": "fTtj9aCuloX9",
         "outputId": "4ed6bd8e-4736-4d69-edcb-dede1ae6c32e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1404,7 +1404,7 @@
         "id": "99sCrjj6mp8M",
         "outputId": "52cc4505-c603-47a3-d812-ac301cce2784"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1574,7 +1574,7 @@
         "id": "XU0mRbdpm-1U",
         "outputId": "f87033d8-25ec-4138-ee81-67f81854d998"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1790,7 +1790,7 @@
         "id": "xGV3UFdDnHQC",
         "outputId": "bf696eef-3a53-4425-cdcf-22106f907ce9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1961,7 +1961,7 @@
         "id": "2TSCyD_Cnm4S",
         "outputId": "d08d1f95-3892-4315-bd20-99207187d4db"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2125,7 @@
         "id": "WgKsMtYzn0y-",
         "outputId": "fce04fe9-2ced-4d69-8605-95728ee0a00c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2344,13 +2344,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "sUGBsElJn__m",
         "outputId": "d83a7cef-315a-451c-f780-164bea202195"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2521,13 +2520,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "fqEoJ2tRozWZ",
         "outputId": "b7fcee5b-735b-48cb-f689-948840027aa7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2715,13 +2713,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8rjkYLMEpcjG",
         "outputId": "6a3dde25-2539-4bd0-a89f-331d5f7fec09"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2927,7 +2924,7 @@
       "metadata": {
         "id": "2WJN9JaErm9X"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2938,7 +2935,7 @@
       "metadata": {
         "id": "SrV4y0Adssxu"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2956,7 +2953,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data_df.groupby('nationality').count()"
+        "data_df.groupby('nationality').count()  # ทำการจัดกลุ่มที่มี nationality เหมือนกัน เเล้ว  .count() คือการนับจำนวน"
       ],
       "metadata": {
         "colab": {
@@ -2966,7 +2963,7 @@
         "id": "-y202q2ntvvC",
         "outputId": "95fd75b3-4a70-4842-ceca-e6df89c95c6f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3266,7 +3263,7 @@
           "height": 455
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3474,7 +3471,7 @@
         "id": "3ZdeDpQYu7NA",
         "outputId": "42ae72e7-5d86-44d7-c6e9-ef802d97792e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3513,7 +3510,7 @@
         "id": "25gLIc29vjCq",
         "outputId": "2ffd3f79-d693-41ef-bbdd-8980a1d6264e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3735,7 +3732,7 @@
       "metadata": {
         "id": "4dsY7Em-F0Wh"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3762,7 +3759,7 @@
         "         {'account':'Blue Inc','Jan':50,'Feb':90,'Mar':95}]\n",
         "data_list "
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3790,7 +3787,7 @@
         "id": "OnK8Po5wF6Fr",
         "outputId": "ad0a0a13-deca-4849-8353-5d75b54c911b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3820,7 +3817,7 @@
         "df1 = pd.DataFrame(data_list)\n",
         "df1"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3995,7 +3992,7 @@
         "df2 = pd.DataFrame.from_records(data,columns=headers)\n",
         "df2"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4156,7 +4153,7 @@
         "id": "eM80t0xiIQAG",
         "outputId": "b2f01609-428c-4faf-8c4f-c8084fb94d31"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4324,7 +4321,7 @@
       "metadata": {
         "id": "4vC0GGM-G0Py"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4341,7 +4338,7 @@
         "id": "myrrkVxMJtRo",
         "outputId": "60e2d67b-5b0a-48d3-e9db-62272503df9e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4509,7 +4506,7 @@
       "metadata": {
         "id": "bJn2ZNR7KBox"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4522,7 +4519,7 @@
       "metadata": {
         "id": "kuIL5eLsK_-f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4559,7 +4556,7 @@
       "metadata": {
         "id": "Ax3vLslkv7Zc"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4576,7 +4573,7 @@
         "id": "TYRiM1XlwDfg",
         "outputId": "91f5e056-3359-4011-8b74-0b1f2132db28"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4815,7 +4812,7 @@
         "id": "Ed_ZqqfMKlS8",
         "outputId": "2ef941fb-2c06-4868-a14f-cf0403a014ea"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4847,7 +4844,7 @@
         },
         "id": "NaKL2kA1LkdW"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
