--- a/DataViz02_Data_Distribution.ipynb
+++ b/DataViz02_Data_Distribution.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DataViz02 Data Distribution.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNN1pAF2H1giPrkzsbMA5GL",
+      "authorship_tag": "ABX9TyPxOCstjOuq/FE7shLcKa9k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1418,11 +1418,11 @@
         "ybp['whiskers'][0].get_xdata()  # min คือ 4.3 #ใช้ whiskers หา min แทน เพราะจากที่เรา plot graph ข้างบนมันไม่มี min "
       ],
       "metadata": {
-        "id": "rtZ8SFBkUvLX",
-        "outputId": "43ccb07f-2e2a-4f60-8808-022e0eb1f392",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rtZ8SFBkUvLX",
+        "outputId": "43ccb07f-2e2a-4f60-8808-022e0eb1f392"
       },
       "execution_count": 37,
       "outputs": [
@@ -1505,11 +1505,11 @@
         "ybp['caps'][1].get_xdata()  # cap ดูว่าเส้นตรงหนวดแมววาดยังไง"
       ],
       "metadata": {
-        "id": "RA9Bo27yWyUF",
-        "outputId": "7e3edd26-96fa-45ea-fbf9-e11c422d1e6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RA9Bo27yWyUF",
+        "outputId": "7e3edd26-96fa-45ea-fbf9-e11c422d1e6f"
       },
       "execution_count": 41,
       "outputs": [
@@ -1540,11 +1540,11 @@
         "ybp['boxes'][0].get_xdata()"
       ],
       "metadata": {
-        "id": "0BR5z73tXv1g",
-        "outputId": "1b2d87ee-5f3b-45e8-8ea4-45ceee3b5b68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0BR5z73tXv1g",
+        "outputId": "1b2d87ee-5f3b-45e8-8ea4-45ceee3b5b68"
       },
       "execution_count": 43,
       "outputs": [
@@ -1566,11 +1566,11 @@
         "ybp['boxes'][0].get_xdata()[0]  #กราฟแนวนอนเลยเป็น get_xdata"
       ],
       "metadata": {
-        "id": "KAK3tkesXSS5",
-        "outputId": "f532600c-c0d7-4733-fa38-e5ea42384c63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KAK3tkesXSS5",
+        "outputId": "f532600c-c0d7-4733-fa38-e5ea42384c63"
       },
       "execution_count": 42,
       "outputs": [
@@ -1592,11 +1592,11 @@
         "max(ybp['whiskers'][0].get_xdata())  #หา Q1 จาห whiskers ก็ได้"
       ],
       "metadata": {
-        "id": "I8l6hsToXYAt",
-        "outputId": "2e93ac9c-0089-4ec7-9f91-dcd3f58427bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I8l6hsToXYAt",
+        "outputId": "2e93ac9c-0089-4ec7-9f91-dcd3f58427bd"
       },
       "execution_count": 45,
       "outputs": [
@@ -1627,12 +1627,12 @@
         "plt.boxplot(df['SepalLength'],vert=False,showmeans=True)"
       ],
       "metadata": {
-        "id": "UQqsT9mBYEdQ",
-        "outputId": "838c6511-a458-4215-b974-7984befc91b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
-        }
+        },
+        "id": "UQqsT9mBYEdQ",
+        "outputId": "838c6511-a458-4215-b974-7984befc91b7"
       },
       "execution_count": 46,
       "outputs": [
@@ -1673,12 +1673,12 @@
         "plt.boxplot(df['SepalLength'],vert=False,meanline=True,showmeans=True)"
       ],
       "metadata": {
-        "id": "w8R34kWGZVjj",
-        "outputId": "cc74d4c5-0417-49e2-a437-5f0fb2cf072c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
-        }
+        },
+        "id": "w8R34kWGZVjj",
+        "outputId": "cc74d4c5-0417-49e2-a437-5f0fb2cf072c"
       },
       "execution_count": 47,
       "outputs": [
@@ -1719,12 +1719,12 @@
         "plt.boxplot(df['SepalLength'],vert=False,showmeans=True,meanprops={'marker':'o'}) #เปลี่ยนรูปร่าง mean เป็น o"
       ],
       "metadata": {
-        "id": "rxPLPYMcZuxe",
-        "outputId": "a1f95a06-0acf-4c32-89f4-65309b921286",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
-        }
+        },
+        "id": "rxPLPYMcZuxe",
+        "outputId": "a1f95a06-0acf-4c32-89f4-65309b921286"
       },
       "execution_count": 49,
       "outputs": [
@@ -1775,7 +1775,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def box_vals(box_out_dict):\n",
+        "def box_vals(box_out_df):\n",
         "    q1 = ybp['boxes'][0].get_xdata()[0]\n",
         "    q2 = ybp['boxes'][0].get_xdata()[1]\n",
         "    q3 = ybp['boxes'][0].get_xdata()[2]\n",
@@ -1793,7 +1793,7 @@
       "metadata": {
         "id": "4Ofo3DtjgpbI"
       },
-      "execution_count": 56,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1802,13 +1802,13 @@
         "box_vals(df)"
       ],
       "metadata": {
-        "id": "9RXsezCegtmJ",
-        "outputId": "1845422a-1fed-4da8-d9bd-12316cc01fba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9RXsezCegtmJ",
+        "outputId": "fa94319d-abaf-4332-f305-42b99c2954b5"
       },
-      "execution_count": 57,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
