--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Final_Project.ipynb",
       "provenance": [],
       "mount_file_id": "16yQGoAYKWkOxLpGuBbhro8pJpKZzDOdY",
-      "authorship_tag": "ABX9TyOM+j5HJJJ+s9dO4CkF7qrw",
+      "authorship_tag": "ABX9TyMrq35dADJeGPXuOV0T9c2v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,11 +93,11 @@
         "data_covid4 = pd.read_csv(os.path.join(path, 'confirmed-cases-since-280265.csv'))"
       ],
       "metadata": {
-        "id": "_tA7HR9D7B_W",
-        "outputId": "b04f8117-dd2b-4210-d2e3-c81cd5570875",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_tA7HR9D7B_W",
+        "outputId": "b04f8117-dd2b-4210-d2e3-c81cd5570875"
       },
       "execution_count": 41,
       "outputs": [
@@ -494,11 +494,11 @@
         "data_covid1.isnull().any()"
       ],
       "metadata": {
-        "id": "Djr_OjYa9SXv",
-        "outputId": "c5b94c66-16a6-4ccc-acb1-5653123dd17b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Djr_OjYa9SXv",
+        "outputId": "c5b94c66-16a6-4ccc-acb1-5653123dd17b"
       },
       "execution_count": 54,
       "outputs": [
@@ -541,12 +541,12 @@
         "data_covid1_updated.head()"
       ],
       "metadata": {
-        "id": "D-lZYjSozScR",
-        "outputId": "9676d2de-df69-45c4-9897-1a9453f87125",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "D-lZYjSozScR",
+        "outputId": "9676d2de-df69-45c4-9897-1a9453f87125"
       },
       "execution_count": 55,
       "outputs": [
@@ -773,11 +773,11 @@
         "data_covid1_updated.isnull().any()"
       ],
       "metadata": {
-        "id": "TzKMM5-u2be7",
-        "outputId": "c90a0181-58fa-45da-cf16-cc12f6a04e5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TzKMM5-u2be7",
+        "outputId": "c90a0181-58fa-45da-cf16-cc12f6a04e5e"
       },
       "execution_count": 56,
       "outputs": [
@@ -816,12 +816,12 @@
     {
       "cell_type": "code",
       "source": [
-        "data_covid_mean1 = data_covid1.fillna(value={'age':data_covid1['age'].mean()})  #เติม missing ด้วยค่าเฉลี่ย"
+        "data_covid_mean1 = data_covid1_updated.fillna(value={'age':data_covid1['age'].mean()})  #เติม missing ด้วยค่าเฉลี่ย"
       ],
       "metadata": {
         "id": "gJ47wMOz2i-d"
       },
-      "execution_count": 63,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -830,13 +830,13 @@
         "data_covid_mean1.isnull().any()  #คอลัมน์ sex ไม่มี missing"
       ],
       "metadata": {
-        "id": "OObZkrik6DLm",
-        "outputId": "6165c36a-51d8-4cfc-a5ad-63b4051109ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OObZkrik6DLm",
+        "outputId": "2607c26c-99cc-4b22-f9a9-9c202bb633f1"
       },
-      "execution_count": 64,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,20 +844,20 @@
             "text/plain": [
               "No.                      False\n",
               "announce_date            False\n",
-              "Notified date             True\n",
-              "sex                       True\n",
+              "Notified date            False\n",
+              "sex                      False\n",
               "age                      False\n",
-              "Unit                      True\n",
-              "nationality               True\n",
-              "province_of_isolation     True\n",
-              "risk                      True\n",
-              "province_of_onset         True\n",
-              "district_of_onset         True\n",
+              "Unit                     False\n",
+              "nationality              False\n",
+              "province_of_isolation    False\n",
+              "risk                     False\n",
+              "province_of_onset        False\n",
+              "district_of_onset        False\n",
               "dtype: bool"
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 70
         }
       ]
     },
@@ -890,12 +890,12 @@
         "data_covid2"
       ],
       "metadata": {
-        "id": "TjiCrA1m6mg2",
-        "outputId": "f316c35b-d3af-4057-dd10-accda1cc6300",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "TjiCrA1m6mg2",
+        "outputId": "f316c35b-d3af-4057-dd10-accda1cc6300"
       },
       "execution_count": 60,
       "outputs": [
@@ -1236,11 +1236,11 @@
         "data_covid2.isnull().any()"
       ],
       "metadata": {
-        "id": "VT0X9tgX-FfI",
-        "outputId": "b261ee78-11a3-4c14-e4d1-91f18c993c97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VT0X9tgX-FfI",
+        "outputId": "b261ee78-11a3-4c14-e4d1-91f18c993c97"
       },
       "execution_count": 61,
       "outputs": [
@@ -1274,12 +1274,12 @@
         "data_covid2_updated.head()"
       ],
       "metadata": {
-        "id": "shJecafj-L4W",
-        "outputId": "1c59a90f-003d-4cdc-b946-46a2dc4f129b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "shJecafj-L4W",
+        "outputId": "1c59a90f-003d-4cdc-b946-46a2dc4f129b"
       },
       "execution_count": 62,
       "outputs": [
@@ -1512,12 +1512,12 @@
     {
       "cell_type": "code",
       "source": [
-        "data_covid_mean2 = data_covid1.fillna(value={'age':data_covid1['age'].mean()})  #เติม missing ด้วยค่าเฉลี่ย"
+        "data_covid_mean2 = data_covid2_updated .fillna(value={'age':data_covid1['age'].mean()})  #เติม missing ด้วยค่าเฉลี่ย"
       ],
       "metadata": {
         "id": "wU_53tns-eds"
       },
-      "execution_count": 67,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -1526,13 +1526,13 @@
         "data_covid_mean2.isnull().any()"
       ],
       "metadata": {
-        "id": "4IuJ26yY-wMD",
-        "outputId": "f410edd0-4cc1-4989-9987-041a010f08f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4IuJ26yY-wMD",
+        "outputId": "2d88a44f-4699-4707-d403-6c680a1af60f"
       },
-      "execution_count": 68,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,20 +1540,20 @@
             "text/plain": [
               "No.                      False\n",
               "announce_date            False\n",
-              "Notified date             True\n",
-              "sex                       True\n",
+              "Notified date            False\n",
+              "sex                      False\n",
               "age                      False\n",
-              "Unit                      True\n",
-              "nationality               True\n",
-              "province_of_isolation     True\n",
-              "risk                      True\n",
-              "province_of_onset         True\n",
-              "district_of_onset         True\n",
+              "Unit                     False\n",
+              "nationality              False\n",
+              "province_of_isolation    False\n",
+              "risk                     False\n",
+              "province_of_onset        False\n",
+              "district_of_onset        False\n",
               "dtype: bool"
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 72
         }
       ]
     },
